# realtime-edge-detection-android

./: README.md  gradle.properties  gradlew.bat  local.properties  package-lock.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cameraimageprocessor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-image-processor.cpp
app/src/main/java/com/example/cameraimageprocessor/: ImageProcessor.java  ImageUploader.java  MainActivity.java  NativeImageProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cameraimageprocessor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web-viewer/: package-lock.json  package.json  server.js  tsconfig.json
web-viewer/public/: index.html  script.js  style.css
